<resources>
    <string name="app_name">Mami Wata</string>
    <string name="title_home">Water</string>
    <string name="title_donations">Donations</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_settings">Settings</string>

    <string name="hello_donations_fragment">Fragment Donations</string>
    <string name="no_internet_dialog">There is something wrong with your internet connection - please turn on wifi to connect to your data.</string>

    <!-- Home Fragment -->
    <string name="hello_home_fragment">Fragment Home</string>
    <string name="home_h1">Your body needs water!</string>
    <string name="home_percent">0%</string>
    <string name="home_h2">0,0 from 0 liter</string>
    <string name="home_h3">Reach your goal or donate</string>

    <!-- Bottom Sheet Fragment -->
    <string name="drink1">100 ml</string>
    <string name="drink2">250 ml</string>
    <string name="drink3">330 ml</string>
    <string name="drink4">500 ml</string>
    <string name="drink5">1000 ml</string>

    <!-- Donations Fragment -->
    <string name="donations_title">Water Works - UNICEF</string>
    <string name="donations_content">Every child has a right to safe water, as deadly pathogens often lurk in polluted water. So that more wells can be built and tanks filled, we need your support - thank you!</string>

    <!-- Settings Fragment -->
    <string name="hello_settings_fragment">About me</string>
    <string name="drinkMe">You should drink this amount of water, but if you want, you can change that number!</string>
    <string name="notification_settings">Notifications</string>

    <!-- Gender Array-->
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings related to login -->
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_new_account">Register now</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

    <!-- Strings related to about -->
    <string name="title_activity_about">About</string>
    <string name="made_with_love">Made with love and passion</string>
    <string name="about_app">Nice that you are here - and welcome to my App! This App reminds you that you should drink enough water during the day - and if you do not comply, it teaches you by donating small amounts of money. This is just a theoretical App - everything is set up but not available as an actual App ... and it is still a work in progress.</string>
    <string name="about_me">My name is Jacqueline and I designed and developed this project as part of my studies "Digital Media Design" at the University of Applied Sciences Ravensburg-Weingarten. This app concept and development took place in the Android Development course.</string>

</resources>